removed some animations

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #header {
-	background: url(./img/annie-spratt-bGdiuIyN3Rs-unsplash.jpg) center / cover no-repeat;
+	background: url(../img/annie-spratt-bGdiuIyN3Rs-unsplash.jpg) center / cover no-repeat;
 	font-family: "PT Serif";
 }
 
